# youtube-nlp-spam-detector

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
src/configuration/: config.py
src/database/alembic/: env.py
src/database/alembic/versions/: 771c8ec498fc_added_title_to_video.py  d3b61d4dc259_create_tables.py
src/database/models/: __init__.py  comment.py  comment_thread.py  video.py
src/youtube_comment_collecter/: __main__.py  comment.py  comment_thread.py  constants.py  video.py
src/youtube_comment_collecter/api_resources/: comment_resource.py  comment_thread_resource.py  error.py  video_resource.py
src/youtube_comment_collecter/data/: comment.py  comment_thread.py  video.py
