[build-system]
requires = ["setuptools>=60.3.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py38"]
line-length = 79
preview = true

[tool.mypy]
python_version = "3.8"
mypy_path = "src"
disallow_incomplete_defs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
