[metadata]
name = youtube_nlp_spam_detector
version = 0.1.0
description = Detect spam YouTube comments using NLP
long_description = file: README.md
long_description_content_type = text/markdown
author = Mojtaba Alkhalifah
author_description = A humble graduate from King Fahd University of Petroleum and Minerals.
author_email = mujtaba.alk09@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src
install_requires =
    httpx>=0.23
zip_safe = no

[options.extras_require]
testing =
    flake8>=4.0
    mypy>=0.941

[options.package_data]
coding_questions = py.typed

[flake8]
ignore = E203, W503
